# portfolio

backend/: main.py  pyproject.toml
frontend/src/: App.tsx  index.css
frontend/src/Components/AboutSection/: index.tsx
frontend/src/Components/AboutSection/Style/: AboutSection.module.css
frontend/src/Components/FirstExampleSection/: index.tsx
frontend/src/Components/FirstExampleSection/Style/: FirstExampleSection.module.css
frontend/src/Components/Header/: index.tsx
frontend/src/Components/Header/Style/: Header.module.css
frontend/src/Components/IntroSection/: index.tsx
frontend/src/Components/IntroSection/Style/: Header.module.css
frontend/src/Components/Topic/: index.tsx
frontend/src/Components/Topic/Style/: Header.module.css
frontend/src/Logic/: Parallax.tsx  ScrollTriger.tsx  parallax.tsx
frontend/src/Models/: interfeces.tsx
